Actualizacion de errores de semana 8/9

--- a/src/main/resources/templates/articulo/listado.html
+++ b/src/main/resources/templates/articulo/listado.html
@@ -24,7 +24,7 @@
                     <tbody>
                         <tr th:each="articulo : ${articulos}">
                             <td th:text="${articulo.descripcion}"></td>
-                            <td th:text="${#numbers.formatDecimal(articulo.precio, 3, 2)}" style="text-align: right"></td>
+                            <td th:text="${#numbers.formatDecimal(articulo.precio,3,2)}" style="text-align: right"></td>
                             <td th:text="${articulo.existencias}" style="text-align: center"></td>
                             <td> <input type="checkbox" name="activa" th:checked="${articulo.activo}" disabled="true"></td>
                             <td><a th:href="@{/articulo/eliminar/} + ${articulo.idArticulo}">Eliminar</a></td>
