--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -10,18 +10,25 @@
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
             <h2>Listado de clientes</h2>
+            <a th:href="@{/cliente/nuevo}">Nuevo cliente</a>
+            <br/>
+            <!-- <label>
+                <h3>Filtro por Apellidos</h3>
+                <label for="apellidos">Apellidos:</label><br/>
+                <input type="text" name="apellidos" th:field="*{apellidos}"/><br/>
+            </label>
+            <br/><br/>
             <a th:href="@{/cliente/nuevo}">Nuevo Cliente</a> 
             <!-- el "@" es para acceder a rutas y el "$" es para evaluar atributos -->
             <br/>
-            <div th:if="${clientes != null and !clientes.empty}">
-
+            <div th:if="${clientes != null and !clientes.empty}"> 
                 <table border="1">
                     <thead>
                     <th>Nombre</th>
                     <th>Apellidos</th>
                     <th>Correo</th>
-                    <th>Telefono</th>
-                    <th>Limite</th>
+                    <th>Teléfono</th>
+                    <th>Límite</th>
                     <th colspan="2">Acciones</th>
                     </thead>
                     <tbody>
