--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org" 
+      xmlns="http://www.w3.org/1999/xhtml">
 
     <head>
         <title>TechShop</title>
         <meta charset="UTF-8">
         <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
+    
     <body>
-
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
             <h2>Nuestros Articulos</h2>
+            
             <div th:if="${articulos != null and !articulos.empty}">
                 <table border="1">
                     <thead>
