--- a/src/main/resources/templates/articulo/modificar.html
+++ b/src/main/resources/templates/articulo/modificar.html
@@ -1,37 +1,44 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>Techshop</title>
-        <meta charset="UTF-8">
-            <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+    <head th:replace="layout/plantilla :: head">
+        <title>TechShop</title>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
-            <h2> Datos de Cliente </h2>
-            <a th:href="@{/articulo/listado}">Regresar</a>
+            <h2 th:text="#{articulo.datos}"> Datos de Cliente </h2>
+            <br/>
+            <a th:href="@{/articulo/listado}" 
+               th:text="#{accion.regresar}">Regresar</a>
             <br/>
             <br/>
-            <form th:action="@{/articulo/guardar}" method="post" th:object="${articulo}">
+            <form th:action="@{/articulo/guardar}" 
+                  method="post" 
+                  th:object="${articulo}">
                 <input type="hidden" name="idArticulo" th:field="*{idArticulo}"/>
                 <br/>
-                <label for="categoria">Categoria: </label>
+                <label for="categoria" th:text="#{articulo.categoria}">Categoria: </label>
                 <select th:field="*{idCategoria}">
                     <option th:each="categoria: ${categorias}"
                             th:value="${categoria.idCategoria}"
                             th:text="${categoria.descripcion}"/>
                 </select><br/>    
-                <label for="descripcion">Descripcion: </label>    
+                <label for="descripcion" th:text="#{articulo.descripcion}">Descripcion: </label>    
                 <input type="text" name="descripcion" th:field="*{descripcion}"/><br/>
-                <label for="detalle">Detalle: </label>
+                
+                <label for="detalle" th:text="#{articulo.detalle}">Detalle: </label>
                 <textarea type="detalle" th:field="*{detalle}" rows="6" cols="50"/><br/>
-                <label for="precio">Precio: </label>
+                
+                <label for="precio" th:text="#{articulo.precio}">Precio: </label>
                 <input type="number" name="precio" th:field="*{precio}"/><br/>
-                <label for="existencias">Existencias: </label><br/>
+                
+                <label for="existencias" th:text="#{articulo.existencias}">Existencias: </label><br/>
                 <input type="number" name="existencias" th:field="*{existencias}"/><br/>
-                <label for="activo">Activo:</label>
+                
+                <label for="activo" th:text="#{articulo.activo}">Activo:</label>
                 <input type="checkbox" name="activo" th:field="*{activo}"/><br/><br/>
-                <input type="submit" name="guardar" value ="Guardar"/>
+                
+                <input type="submit" name="guardar" th:value="#{accion.guardar}"/>
             </form>
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
