--- a/src/main/resources/templates/categoria/listado.html
+++ b/src/main/resources/templates/categoria/listado.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>Techshop</title>
-        <meta charset="UTF-8">
-            <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+    <head th:replace="layout/plantilla :: head">
+        <title>TechShop</title>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
-            <h2>Listado de Clientes</h2>
-            <a th:href="@{/categoria/nuevo}">Nueva Categoria</a>
+            <h2 th:text="#{categoria.titulo}">Listado de Categorias</h2>
+            <br/><br/>
+            <a th:href="@{/categoria/nuevo}" th:text="#{categoria.nuevo}">Nueva Categoria</a>
             <div th:if="${categorias != null and !categorias.empty}"> 
                 <table border="1">
                     <thead>
                         <tr>
-                            <th>Descripcion</th>
-                            <th>Activa</th>
+                            <th th:text="#{categoria.descripcion}">Descripcion</th>
+                            <th th:text="#{categoria.activo}">Activa</th>
+                            <th th:text="#{accion.eliminar}">Eliminar</th>
+                            <th th:text="#{accion.actualizar}">Actualizar</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr th:each="categoria : ${categorias}">
                             <td th:text="${categoria.descripcion}"></td>
                             <td> <input type="checkbox" name="activa" th:checked="${categoria.activo}" disabled="true"></td>
-                            <td><a th:href="@{/categoria/eliminar/} + ${categoria.idCategoria}">Eliminar</a></td>
-                            <td><a th:href="@{/categoria/modificar/} + ${categoria.idCategoria}">Modificar</a></td>
+                            <td><a th:href="@{/categoria/eliminar/} + ${categoria.idCategoria}"
+                                   th:text="#{accion.eliminar}">Eliminar</a></td>
+                            <td><a th:href="@{/categoria/modificar/} + ${categoria.idCategoria}"
+                                   th:text="#{accion.actualizar}">Modificar</a></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
             <div th:if="${categorias == null or categorias.empty}">
-                No tenemos categorias que mostrar...
+                <p th:text="#{clientes.no_mostrar}">No tenemos clientes que mostrar...</p>
             </div>
         </div>
         <footer th:replace="layout/plantilla :: footer"/>
