--- a/src/main/resources/templates/categoria/modificar.html
+++ b/src/main/resources/templates/categoria/modificar.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <title>Techshop</title>
-        <meta charset="UTF-8">
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
+    <head th:replace="layout/plantilla :: head">
+        <title>TechShop</title>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
-            <h2> Datos de Cliente </h2>
-        <a th:href="@{/categoria/listado}">Regresar</a>
+            <h2 th:text="#{categoria.datos}"> Datos de Cliente </h2>
+        <a th:href="@{/categoria/listado}" th:text="#{accion.regresar}">Regresar</a>
         <br/>
         <br/>
         <form th:action="@{/categoria/guardar}" method="post" th:object="${categoria}">
             
             <input type="hidden" name="idCategoria" th:field="*{idCategoria}"/>
-            <label for="descripcion">Descripcion: </label>    
+            <label for="descripcion"
+                   th:text="#{categoria.descripcion:}">Descripcion: </label>    
             <input type="text" name="descripcion" th:field="*{descripcion}"/><br/>
             <br/>
-            <label for="activo">Activo:</label>
+            <label for="activo" th:text="#{categoria.activo}">Activo:</label>
             <input type="checkbox" name="activo" th:field="*{activo}"/>
             <br/><br/>
-            <input type="submit" name="guardar" value="Guardar"/>
+            <input type="submit" name="guardar" th:value="#{accion.guardar}"/>
             
         </form>
         </div>
