--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-    <head>
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
-        <meta charset="UTF-8">
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
-            <h2>Listado de clientes</h2>
-            <a th:href="@{/cliente/nuevo}">Nuevo cliente</a>
-            <br/>
-            <!-- <label>
-                <h3>Filtro por Apellidos</h3>
-                <label for="apellidos">Apellidos:</label><br/>
-                <input type="text" name="apellidos" th:field="*{apellidos}"/><br/>
-            </label>
+            <h2 th:text="#{cliente.titulo}">Listado de clientes</h2>
             <br/><br/>
-            <a th:href="@{/cliente/nuevo}">Nuevo Cliente</a> 
-            <!-- el "@" es para acceder a rutas y el "$" es para evaluar atributos -->
-            <br/>
+            <a th:href="@{/cliente/nuevo}" th:text="#{cliente.nuevo}">Nuevo cliente</a>
+            <br/><br/>
+
             <div th:if="${clientes != null and !clientes.empty}"> 
                 <table border="1">
                     <thead>
-                    <th>Nombre</th>
-                    <th>Apellidos</th>
-                    <th>Correo</th>
-                    <th>Teléfono</th>
-                    <th>Límite</th>
-                    <th colspan="2">Acciones</th>
+                    <th th:text="#{cliente.nombre}">Nombre</th>
+                    <th th:text="#{cliente.apellidos}">Apellidos</th>
+                    <th th:text="#{cliente.correo}">Correo</th>
+                    <th th:text="#{cliente.telefono}">Teléfono</th>
+                    <th th:text="#{cliente.limite}">Límite</th>
+                    <th th:text="#{accion.actualizar}">Actualizar</th>
+                    <th th:text="#{accion.eliminar}">Eliminar</th>
                     </thead>
                     <tbody>
                         <tr th:each="cliente : ${clientes}">
@@ -38,8 +30,10 @@
                             <td th:text="${cliente.correo}"></td>
                             <td th:text="${cliente.telefono}"></td>
                             <td th:text="${#numbers.formatDecimal(cliente.credito.limite, 3, 2)}"></td>
-                            <td><a th:href="@{/cliente/modificar/} + ${cliente.idCliente}">Modificar</a></td>
-                            <td><a th:href="@{/cliente/eliminar} + ${cliente.idCliente}">Eliminar</a></td>
+                            <td><a th:href="@{/cliente/modificar/} + ${cliente.idCliente}"
+                                   th:text="#{accion.actualizar}">Modificar</a></td>
+                            <td><a th:href="@{/cliente/eliminar} + ${cliente.idCliente}"
+                                   th:text="#{accion.eliminar}">Eliminar</a></td>
                         </tr>
                     </tbody>
                 </table>
@@ -47,7 +41,7 @@
             </div>
 
             <div th:if="${clientes ==null or clientes.empty}">
-                la lista de clientes esta vacia 
+                <p th:text="#{clientes.no_mostrar}">No tenemos clientes que mostrar...</p>
             </div>
 
             <footer th:replace="layout/plantilla :: footer"/>
