--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,37 +3,38 @@
 <html xmlns:th="http://www.thymeleaf.org" 
       xmlns="http://www.w3.org/1999/xhtml">
 
-    <head>
+    <head th:replace="layout/plantilla :: head">
         <title>TechShop</title>
-        <meta charset="UTF-8">
-        <link href="/css/menu.css" rel="stylesheet" type="text/css"/>
     </head>
     
     <body>
         <header th:replace="layout/plantilla :: header"/>
         <div class="contenido">
-            <h2>Nuestros Articulos</h2>
+            <h2 th:text="#{index.titulo}">Nuestros Articulos</h2>
             
             <div th:if="${articulos != null and !articulos.empty}">
                 <table border="1">
                     <thead>
                         <tr>
-                            <th>Descripcion</th>
-                            <th>Precio</th>
+                            <th th:text="#{articulo.descripcion}">Descripcion</th>
+                            <th th:text="#{articulo.precio}">Precio</th>
+                            <th th:text="#{articulo.comprar}">Acciones</th>
                         </tr>
                     </thead>
                     <tbody>
-                        <tr th:each="articulo : ${articulos}">
-                            <td th:text="${articulo.descripcion}"></td>
-                            <td th:text="${#numbers.formatDecimal(articulo.precio,3,2)}" style="text-align: right"></td>
-                            <td><a th:href="@{/carrito/agregar/} + ${articulo.idArticulo}">Agregar</a></td>
+                        <tr th:each="item : ${articulos}">
+                            <td th:text="${item.descripcion}"></td>
+                            <td th:text="${#numbers.formatDecimal(item.precio,3,2)}" style="text-align: right"></td>
+                            <td><a th:href="@{/carrito/agregar/} + ${item.idArticulo}"
+                                   th:text="#{accion.agregar}">Agregar</a></td>
                         </tr>
                     </tbody>
                 </table>
             </div>
             
             <div th:if="${articulos == null or articulos.empty}">
-                No tenemos articulos que mostrar...
+                <p th:text="#{articulo.no_mostrar}">No tenemos articulos que mostrar...</p>
+                
             </div>
 
         </div>
