--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -5,45 +5,13 @@
         <title>TechShop</title>
     </head>
     <body>
-        <header th:replace="layout/plantilla :: header"/>
-        <div class="contenido">
-            <h2 th:text="#{cliente.titulo}">Listado de clientes</h2>
-            <br/><br/>
-            <a th:href="@{/cliente/nuevo}" th:text="#{cliente.nuevo}">Nuevo cliente</a>
-            <br/><br/>
+        <header th:replace="layout/plantilla :: header" />
 
-            <div th:if="${clientes != null and !clientes.empty}"> 
-                <table border="1">
-                    <thead>
-                    <th th:text="#{cliente.nombre}">Nombre</th>
-                    <th th:text="#{cliente.apellidos}">Apellidos</th>
-                    <th th:text="#{cliente.correo}">Correo</th>
-                    <th th:text="#{cliente.telefono}">Teléfono</th>
-                    <th th:text="#{cliente.limite}">Límite</th>
-                    <th th:text="#{accion.actualizar}">Actualizar</th>
-                    <th th:text="#{accion.eliminar}">Eliminar</th>
-                    </thead>
-                    <tbody>
-                        <tr th:each="cliente : ${clientes}">
-                            <td th:text="${cliente.nombre}"></td>
-                            <td th:text="${cliente.apellidos}"></td>
-                            <td th:text="${cliente.correo}"></td>
-                            <td th:text="${cliente.telefono}"></td>
-                            <td th:text="${#numbers.formatDecimal(cliente.credito.limite, 3, 2)}"></td>
-                            <td><a th:href="@{/cliente/modificar/} + ${cliente.idCliente}"
-                                   th:text="#{accion.actualizar}">Modificar</a></td>
-                            <td><a th:href="@{/cliente/eliminar} + ${cliente.idCliente}"
-                                   th:text="#{accion.eliminar}">Eliminar</a></td>
-                        </tr>
-                    </tbody>
-                </table>
+        <section th:replace="cliente/fragmentosCliente :: botonesAgregar"/>
+        <section th:replace="cliente/fragmentosCliente :: agregarCliente"/>
+        <section th:replace="cliente/fragmentosCliente :: listadoClientes"/>
+        
 
-            </div>
-
-            <div th:if="${clientes ==null or clientes.empty}">
-                <p th:text="#{clientes.no_mostrar}">No tenemos clientes que mostrar...</p>
-            </div>
-
-            <footer th:replace="layout/plantilla :: footer"/>
+        <footer th:replace="layout/plantilla :: footer" />
     </body>
 </html>
